--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pure-admin-thin",
-  "version": "3.9.7",
+  "name": "rms-frontend",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "NODE_OPTIONS=--max-old-space-size=4096 vite",
@@ -120,7 +120,7 @@
       ]
     }
   },
-  "repository": "git@github.com:pure-admin/pure-admin-thin.git",
-  "author": "xiaoxian521",
-  "license": "MIT"
+  "repository": "git@github.com:zhangran-g/rms-frontend.git",
+  "author": "zhangran-g",
+  "license": "none"
 }
