feat: change logo

--- a/public/serverConfig.json
+++ b/public/serverConfig.json
@@ -1,6 +1,6 @@
 {
-  "Version": "3.9.7",
-  "Title": "PureAdmin",
+  "Version": "0.0.1",
+  "Title": "Demo Ltd",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": false,
