--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@commitlint/cli": "13.1.0",
     "@commitlint/config-conventional": "13.1.0",
     "@iconify-icons/ep": "^1.2.10",
+    "@iconify-icons/ph": "^1.2.4",
     "@iconify-icons/ri": "^1.2.4",
     "@iconify/vue": "^4.1.0",
     "@intlify/unplugin-vue-i18n": "^0.8.2",
